--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,96 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_main"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        tools:showIn="@layout/activity_main">
 
     <TextView
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo1"
-            android:textColor="#fff"
+            android:layout_marginTop="100dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
+            android:text="demo1"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="100dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
             android:id="@+id/tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo2"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv1"
-            android:layout_marginTop="20dp"
+            android:text="demo2"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv1" />
+
     <TextView
             android:id="@+id/tv3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo3"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv2"
-            android:layout_marginTop="20dp"
+            android:text="demo3"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv2" />
+
     <TextView
             android:id="@+id/tv4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo4"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv3"
-            android:layout_marginTop="20dp"
+            android:text="demo4"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv3" />
+
     <TextView
             android:id="@+id/tv5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo5"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv4"
-            android:layout_marginTop="20dp"
+            android:text="demo5"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv4" />
+
     <TextView
             android:id="@+id/tv6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo6"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv5"
-            android:layout_marginTop="20dp"
+            android:text="demo6"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv5" />
+
     <TextView
             android:id="@+id/tv7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="demo7"
-            android:textColor="#fff"
+            android:layout_marginTop="20dp"
             android:background="@color/colorPrimary"
             android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv6"
-            android:layout_marginTop="20dp"
+            android:text="demo7"
+            android:textColor="#fff"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv6" />
+
+    <TextView
+            android:id="@+id/tv8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorPrimary"
+            android:padding="10dp"
+            android:text="demo8"
+            android:textColor="#fff"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv7" />
 </android.support.constraint.ConstraintLayout>
